--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Boilerplate for front end</title>
     <meta charset="utf8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="dest/bundle.css" rel="stylesheet">
   </head>
 
   <body>
